--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
 
             <div>
-                <button class="submit">Login</button>
+                <button >Login</button>
             </div>
         </form>
     </div>
